--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
     "vite": "^5.2.3"
   },
   "scripts": {
-    "start": "vite",
-    "build": "vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+  "start": "vite",
+  "build": "vite build --outDir=public",
+  "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+  "preview": "vite preview"
   },
+
   "eslintConfig": {
     "root": true
   },
